Fix flex boxed icon being squashed on some models

--- a/packages/app/components/model-icon.module.css
+++ b/packages/app/components/model-icon.module.css
@@ -4,6 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 2em;
     height: 2em;
+    flex: 0 0 2em;
 }
